<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/globos"
    tools:context=".Main2Activity_nivel3">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_toEndOf="@+id/txtJugador"
        android:layout_toRightOf="@+id/txtJugador"
        android:text="@string/str_nivel_1"
        tools:text="Nivel 4" />

    <TextView
        android:id="@+id/txtScore"
        android:layout_width="109dp"
        android:layout_height="49dp"
        android:layout_below="@+id/txtJugador"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="27dp"
        android:text="@string/txtScore2"
        android:textColor="#000000"
        android:textColorHint="#000000" />

    <TextView
        android:id="@+id/txtVidas"
        android:layout_width="62dp"
        android:layout_height="34dp"
        android:layout_below="@+id/txtScore"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/txtVidas"
        android:textColor="#000000" />

    <ImageView
        android:id="@+id/imgVidas"
        android:layout_width="73dp"
        android:layout_height="34dp"
        android:layout_below="@+id/txtScore"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="49dp"
        android:layout_toEndOf="@+id/txtVidas"
        android:layout_toRightOf="@+id/txtVidas"
        android:contentDescription="@string/txtvidas"
        app:srcCompat="@drawable/tresvidas" />

    <ImageView
        android:id="@+id/imgN1"
        android:layout_width="106dp"
        android:layout_height="54dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="275dp"
        android:contentDescription="@string/imgN1"
        app:srcCompat="@drawable/cero" />

    <ImageView
        android:id="@+id/txtOperacion"
        android:layout_width="99dp"
        android:layout_height="69dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="267dp"
        android:layout_toEndOf="@+id/imgN1"
        android:layout_toRightOf="@+id/imgN1"
        android:contentDescription="@string/txtOperacion"
        app:srcCompat="@drawable/adicion" />

    <ImageView
        android:id="@+id/imgN2"
        android:layout_width="120dp"
        android:layout_height="76dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="270dp"
        android:layout_toEndOf="@+id/txtOperacion"
        android:layout_toRightOf="@+id/txtOperacion"
        android:contentDescription="@string/imgN2"
        app:srcCompat="@drawable/dos" />

    <EditText
        android:id="@+id/txtRespuesta"
        android:layout_width="146dp"
        android:layout_height="35dp"
        android:layout_below="@+id/imgN1"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="64dp"
        android:autofillHints=""
        android:hint="@string/txtrespuesta"
        android:inputType="number"
        android:paddingStart="40dp"
        android:paddingLeft="30dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnComprobar"
        android:layout_width="125dp"
        android:layout_height="51dp"
        android:layout_below="@+id/imgN2"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="41dp"
        android:layout_toEndOf="@+id/txtRespuesta"
        android:layout_toRightOf="@+id/txtRespuesta"
        android:background="@drawable/fondoboton"
        android:onClick="comprobar"
        android:shadowColor="@color/colorPrimary"
        android:text="@string/btncomprobar"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#A61B1B" />

    <TextView
        android:id="@+id/txtJugador"
        android:layout_width="230dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/txtJugador"
        android:textColor="#000000"
        android:textColorHint="#000000" />

</RelativeLayout>