<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/globos"
    tools:context=".MainActivity"
    android:baselineAligned="false">

    <ImageView
        android:id="@+id/imgfrutita"
        android:layout_width="703dp"
        android:layout_height="112dp"
        android:contentDescription="@string/imgfrutita"
        app:srcCompat="@drawable/frutita" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="300dp"
        android:layout_height="86dp"
        android:layout_below="@+id/imgfrutita"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/txtName2"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:paddingStart="40dp"
        android:paddingLeft="40dp"
        android:paddingEnd="50dp"
        android:paddingRight="50dp"
        android:textColorHint="#EFEBEB"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="117dp"
        android:layout_height="56dp"
        android:layout_below="@+id/txtName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:background="@drawable/fondoet"
        android:onClick="jugar"
        android:text="@string/btnRegistrar" />

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="143dp"
        android:layout_height="60dp"
        android:layout_below="@+id/btnRegistrar"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="63dp"
        android:background="@drawable/fondoboton"
        android:text="@string/btnLimpiar" />

    <TextView
        android:id="@+id/txtScore"
        android:layout_width="191dp"
        android:layout_height="43dp"
        android:layout_below="@+id/txtName"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginRight="-2dp"
        android:hint="@string/txtScore"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp" />

</RelativeLayout>